buildscript {
	repositories {
		maven { url 'https://nexus-proxy.almuk.santanderuk.corp/repository/maven-public' }
	}
	dependencies {
		classpath 'org.springframework.boot:spring-boot-gradle-plugin:4.0.4'
		classpath 'io.spring.gradle:dependency-management-plugin:1.1.7'
	}
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.slothlife'
version = '0.0.1-SNAPSHOT'
description = 'Sloth Life Chat API'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenLocal()
	maven { url 'https://nexus-proxy.almuk.santanderuk.corp/repository/maven-public' }
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// API Documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
}
